fix text align and remove jquery for now

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 
 .namn_hoger {
   right: var(--margin);
+  text-align: right;
 }
 
 .line {
